# template-rust

./: .gitignore  Cargo.toml  README.md  cargo-generate.toml
src/: lib.rs  main.rs
tests/: standard.rs
{{crate_name}}/: Cargo.toml  README.md
{{crate_name}}/src/: lib.rs  main.rs
