[package]
authors = ["{{authors}}"]
categories = []
description = "{{description}}"
edition = "{{edition}}"
homepage = "{{homepage}}"
keywords = []
license = "{{spdx-license}}"
name = "{{crate_name}}"
readme = "{{readme}}"
repository = "https://github.com/{{github_username}}/{{crate_name}}.git"
version = "{{crate_version}}"

{% if crate_type = "bin" % }
[[bin]]
bench = false
name = "{{crate_name}}"
test = false
{% else % }
[features]
default = ["core"]
full = ["core"]

core = []

[lib]
crate-type = ["cdylib", "rlib"]
name = "{{crate_name}}"
test = true
{% endif % }

[build-dependencies]

[dependencies]

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

{% if workspace = "bin" % }
[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = 'unwind'
rpath = false
split-debuginfo = '...'  # Platform Specific

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = false
opt-level = "z"
overflow-checks = false
panic = 'unwind'
rpath = false
split-debuginfo = '...'  # Platform Specific
{% endif %}